testdata/baselines/reference/submodule/conformance/importTag13.errors.txt
/foo.js(1,15): error TS1141: String literal expected.


==== /foo.js (1 errors) ====
    /** @import x = require("types") */
                  ~~~~~~~~~~~~~~~~~~
!!! error TS1141: String literal expected.
    
==== /types.ts (0 errors) ====
    export interface Foo {
        a: number;
    }
    